Upstream import 1.0