@@ -28,6 +28,8 @@ import org.gradle.api.internal.tasks.testing.TestResultProcessor;
 import org.gradle.api.internal.tasks.testing.detection.DefaultTestExecuter;
 import org.gradle.api.internal.tasks.testing.detection.TestExecuter;
 import org.gradle.api.internal.tasks.testing.junit.JUnitTestFramework;
+import org.gradle.api.internal.tasks.testing.logging.DefaultTestLogging;
+import org.gradle.api.internal.tasks.testing.logging.StandardStreamsLogger;
 import org.gradle.api.internal.tasks.testing.results.TestListenerAdapter;
 import org.gradle.api.internal.tasks.testing.results.TestLogger;
 import org.gradle.api.internal.tasks.testing.results.TestSummaryListener;
@@ -55,6 +57,34 @@ import java.util.Set;
 
 /**
  * Executes tests. Supports JUnit (3.8.x or 4.x) or TestNG tests.
+ * <p>
+ * An example with a blend of various settings
+ * <pre autoTested=''>
+ * apply plugin: 'java' //so that 'test' task is added
+ *
+ * test {
+ *   //configuring a system property for tests
+ *   systemProperty 'some.prop', 'value'
+ *
+ *   //tuning the included/excluded tests
+ *   include 'org/foo/**'
+ *   exclude 'org/boo/**'
+ *
+ *   //makes the standard streams (err and out) visible at console when running tests
+ *   testLogging.showStandardStreams = true
+ *
+ *   //tweaking memory settings for the forked vm that runs tests
+ *   jvmArgs '-Xms128m', '-Xmx512m', '-XX:MaxPermSize=128m'
+ *
+ *   //listening to test execution events
+ *   beforeTest { descriptor ->
+ *      logger.lifecycle("Running test: " + descriptor)
+ *   }
+ *   onOutput { descriptor, event ->
+ *      logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message )
+ *   }
+ * }
+ * </pre>
  *
  * @author Hans Dockter
  */
@@ -74,10 +104,13 @@ public class Test extends ConventionTask implements JavaForkOptions, PatternFilt
     private long forkEvery;
     private int maxParallelForks = 1;
     private ListenerBroadcast<TestListener> testListenerBroadcaster;
+    private final ListenerBroadcast<TestOutputListener> testOutputListenerBroadcaster;
+    private final TestLogging testLogging = new DefaultTestLogging();
 
     public Test() {
         testListenerBroadcaster = getServices().get(ListenerManager.class).createAnonymousBroadcaster(
                 TestListener.class);
+        testOutputListenerBroadcaster = getServices().get(ListenerManager.class).createAnonymousBroadcaster(TestOutputListener.class);
         this.testExecuter = new DefaultTestExecuter(getServices().getFactory(WorkerProcessBuilder.class), getServices().get(
                 ActorFactory.class));
         options = new DefaultJavaForkOptions(getServices().get(FileResolver.class));
@@ -186,6 +219,34 @@ public class Test extends ConventionTask implements JavaForkOptions, PatternFilt
     public Test bootstrapClasspath(Object... classpath) {
         options.bootstrapClasspath(classpath);
         return this;
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    public String getMinHeapSize() {
+        return options.getMinHeapSize();
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    public String getDefaultCharacterEncoding() {
+        return options.getDefaultCharacterEncoding();
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    public void setDefaultCharacterEncoding(String defaultCharacterEncoding) {
+        options.setDefaultCharacterEncoding(defaultCharacterEncoding);
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    public void setMinHeapSize(String heapSize) {
+        options.setMinHeapSize(heapSize);
     }
 
     /**
@@ -327,13 +388,15 @@ public class Test extends ConventionTask implements JavaForkOptions, PatternFilt
         TestSummaryListener listener = new TestSummaryListener(LoggerFactory.getLogger(Test.class));
         addTestListener(listener);
         addTestListener(new TestLogger(getServices().get(ProgressLoggerFactory.class)));
+        addTestOutputListener(new StandardStreamsLogger(LoggerFactory.getLogger(Test.class), testLogging));
 
-        TestResultProcessor resultProcessor = new TestListenerAdapter(getTestListenerBroadcaster().getSource());
+        TestResultProcessor resultProcessor = new TestListenerAdapter(
+                getTestListenerBroadcaster().getSource(), testOutputListenerBroadcaster.getSource());
         testExecuter.execute(this, resultProcessor);
 
         testFramework.report();
 
-        if (!isIgnoreFailures() && listener.hadFailures()) {
+        if (!getIgnoreFailures() && listener.hadFailures()) {
             throw new GradleException("There were failing tests. See the report at " + getTestReportDir() + ".");
         }
     }
@@ -347,13 +410,26 @@ public class Test extends ConventionTask implements JavaForkOptions, PatternFilt
     }
 
     /**
-     * Registers a test listener with this task.  This listener will NOT be notified of tests executed by other tasks.
+     * Registers a test listener with this task. Consider also the following handy methods for quicker hooking into test execution:
+     * {@link #beforeTest(groovy.lang.Closure)}, {@link #afterTest(groovy.lang.Closure)},
+     * {@link #beforeSuite(groovy.lang.Closure)}, {@link #afterSuite(groovy.lang.Closure)}
+     * <p>
+     * This listener will NOT be notified of tests executed by other tasks.
      * To get that behavior, use {@link org.gradle.api.invocation.Gradle#addListener(Object)}.
      *
      * @param listener The listener to add.
      */
     public void addTestListener(TestListener listener) {
         testListenerBroadcaster.add(listener);
+    }
+
+    /**
+     * Registers a output listener with this task. Quicker way of hooking into output events is using the {@link #onOutput(groovy.lang.Closure)} method.
+     *
+     * @param listener The listener to add.
+     */
+    public void addTestOutputListener(TestOutputListener listener) {
+        testOutputListenerBroadcaster.add(listener);
     }
 
     /**
@@ -366,6 +442,18 @@ public class Test extends ConventionTask implements JavaForkOptions, PatternFilt
      */
     public void removeTestListener(TestListener listener) {
         testListenerBroadcaster.remove(listener);
+    }
+
+    /**
+     * Unregisters a test output listener with this task.  This method will only remove listeners that were added by calling
+     * {@link #addTestOutputListener(org.gradle.api.tasks.testing.TestOutputListener)} on this task.  If the listener was registered
+     * with Gradle using {@link org.gradle.api.invocation.Gradle#addListener(Object)} this method will not do anything.
+     * Instead, use {@link org.gradle.api.invocation.Gradle#removeListener(Object)}.
+     *
+     * @param listener The listener to remove.
+     */
+    public void removeTestOutputListener(TestOutputListener listener) {
+        testOutputListenerBroadcaster.remove(listener);
     }
 
     /**
@@ -415,6 +503,28 @@ public class Test extends ConventionTask implements JavaForkOptions, PatternFilt
     }
 
     /**
+     * Adds a closure to be notified when output from the test received.
+     * A {@link org.gradle.api.tasks.testing.TestDescriptor}
+     * and {@link org.gradle.api.tasks.testing.TestOutputEvent} instance are passed to the closure as a parameter.
+     * <pre autoTested=''>
+     * apply plugin: 'java'
+     *
+     * test {
+     *   onOutput { descriptor, event ->
+     *     if (event.destination == TestOutputEvent.Destination.StdErr) {
+     *       logger.error("Test: " + descriptor + ", error: " + event.message)
+     *     }
+     *   }
+     * }
+     * </pre>
+     *
+     * @param closure The closure to call.
+     */
+    public void onOutput(Closure closure) {
+        testOutputListenerBroadcaster.add("onOutput", closure);
+    }
+
+    /**
      * Adds include patterns for the files in the test classes directory (e.g. '**&#2F;*Test.class')).
      *
      * @see #setIncludes(Iterable)
@@ -434,11 +544,17 @@ public class Test extends ConventionTask implements JavaForkOptions, PatternFilt
         return this;
     }
 
+    /**
+     * {@inheritDoc}
+     */
     public Test include(Spec<FileTreeElement> includeSpec) {
         patternSet.include(includeSpec);
         return this;
     }
 
+    /**
+     * {@inheritDoc}
+     */
     public Test include(Closure includeSpec) {
         patternSet.include(includeSpec);
         return this;
@@ -464,11 +580,17 @@ public class Test extends ConventionTask implements JavaForkOptions, PatternFilt
         return this;
     }
 
+    /**
+     * {@inheritDoc}
+     */
     public Test exclude(Spec<FileTreeElement> excludeSpec) {
         patternSet.exclude(excludeSpec);
         return this;
     }
 
+    /**
+     * {@inheritDoc}
+     */
     public Test exclude(Closure excludeSpec) {
         patternSet.exclude(excludeSpec);
         return this;
@@ -574,16 +696,15 @@ public class Test extends ConventionTask implements JavaForkOptions, PatternFilt
      * {@inheritDoc}
      */
     @Input
-    public boolean isIgnoreFailures() {
+    public boolean getIgnoreFailures() {
         return ignoreFailures;
     }
 
     /**
      * {@inheritDoc}
      */
-    public Test setIgnoreFailures(boolean ignoreFailures) {
+    public void setIgnoreFailures(boolean ignoreFailures) {
         this.ignoreFailures = ignoreFailures;
-        return this;
     }
 
     public TestFramework getTestFramework() {
@@ -644,7 +765,7 @@ public class Test extends ConventionTask implements JavaForkOptions, PatternFilt
     /**
      * Specifies that JUnit should be used to execute the tests.
      *
-     * @param testFrameworkConfigure A closure used to configure the JUint options. This closure is passed an instance
+     * @param testFrameworkConfigure A closure used to configure the JUnit options. This closure is passed an instance
      * of type {@link org.gradle.api.tasks.testing.junit.JUnitOptions}.
      */
     public void useJUnit(Closure testFrameworkConfigure) {
@@ -661,8 +782,8 @@ public class Test extends ConventionTask implements JavaForkOptions, PatternFilt
     /**
      * Specifies that TestNG should be used to execute the tests.
      *
-     * @param testFrameworkConfigure A closure used to configure the JUint options. This closure is passed an instance
-     * of type {@link org.gradle.api.tasks.testing.junit.JUnitOptions}.
+     * @param testFrameworkConfigure A closure used to configure the TestNG options. This closure is passed an instance
+     * of type {@link org.gradle.api.tasks.testing.testng.TestNGOptions}.
      */
     public void useTestNG(Closure testFrameworkConfigure) {
         useTestFramework(new TestNGTestFramework(this), testFrameworkConfigure);
@@ -755,7 +876,7 @@ public class Test extends ConventionTask implements JavaForkOptions, PatternFilt
      * @return The maximum number of forked test processes.
      */
     public int getMaxParallelForks() {
-        return maxParallelForks;
+        return getDebug() ? 1 : maxParallelForks;
     }
 
     /**
@@ -779,16 +900,37 @@ public class Test extends ConventionTask implements JavaForkOptions, PatternFilt
     @InputFiles
     @Input // Also marked as input to force tests to run when the set of candidate class files changes 
     public FileTree getCandidateClassFiles() {
-        PatternSet patterns = new PatternSet();
-        patterns.copyFrom(patternSet);
-        if (!isScanForTestClasses()) {
-            if (patterns.getIncludes().isEmpty()) {
-                patterns.include("**/*Tests.class", "**/*Test.class");
-            }
-            if (patterns.getExcludes().isEmpty()) {
-                patterns.exclude("**/Abstract*.class");
-            }
-        }
-        return getProject().fileTree(getTestClassesDir()).matching(patterns);
+        return getProject().fileTree(getTestClassesDir()).matching(patternSet);
+    }
+
+    /**
+     * Allows configuring the logging of the test execution, for example log eagerly the standard output, etc.
+     * <pre autoTested=''>
+     * apply plugin: 'java'
+     *
+     * //makes the standard streams (err and out) visible at console when running tests
+     * test.testLogging.showStandardStreams = true
+     * </pre>
+     *
+     * @return test logging configuration
+     */
+    public TestLogging getTestLogging() {
+        return testLogging;
+    }
+
+    /**
+     * Allows configuring the logging of the test execution, for example log eagerly the standard output, etc.
+     * <pre autoTested=''>
+     * apply plugin: 'java'
+     *
+     * //makes the standard streams (err and out) visible at console when running tests
+     * test.testLogging {
+     *   showStandardStreams = true
+     * }
+     * </pre>
+     * @param closure configure closure
+     */
+    public void testLogging(Closure closure) {
+        ConfigureUtil.configure(closure, testLogging);
     }
 }
